Feat : Database - Add User Entity & Migration

--- a/.env
+++ b/.env
@@ -31,3 +31,9 @@ APP_SECRET=bddc3749492acfe2b6e52287383e6117
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=postgresql://postgres:vintage@127.0.0.1:5432/test?serverVersion=11&charset=utf8
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=d90c949213336fbd3ef11c9f3ff40ea4
+###< lexik/jwt-authentication-bundle ###
