--- a/.env
+++ b/.env
@@ -35,5 +35,5 @@ DATABASE_URL=postgresql://postgres:vintage@127.0.0.1:5432/test?serverVersion=11&
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=d90c949213336fbd3ef11c9f3ff40ea4
+JWT_PASSPHRASE=test
 ###< lexik/jwt-authentication-bundle ###
